fix(nvim): remove lua telemetry from coc.nvim

--- a/nvim/coc-settings.json
+++ b/nvim/coc-settings.json
@@ -1,7 +1,7 @@
 {
     "suggest.noselect": true,
     "session.directory": "~/.local/share/nvim/sessions",
-    "Lua.telemetry.enable": true,
+    "Lua.telemetry.enable": false,
     "jedi.markupKindPreferred": "markdown",
     "languageserver": {
         "vala": {
