feat(nvim): move to lazy.nvim plugin manager

--- a/.gitignore
+++ b/.gitignore
@@ -70,3 +70,5 @@ Temporary Items
 
 # End of https://www.toptal.com/developers/gitignore/api/linux,macos,visualstudiocode
 
+# lazy.nvim
+lazy-lock.json
