feat(nvim): disable `snippets.ultisnips.pythonPrompt` in coc-settings

--- a/shared/nvim/coc-settings.json
+++ b/shared/nvim/coc-settings.json
@@ -9,5 +9,6 @@
             "command": "vala-language-server",
             "filetypes": ["vala", "genie"]
         }
-    }
+    },
+    "snippets.ultisnips.pythonPrompt": false
 }
